--- a/src/components/Landing/SongList/SongCard/SongCard.module.css
+++ b/src/components/Landing/SongList/SongCard/SongCard.module.css
@@ -5,13 +5,48 @@
   background-position: center center !important;
   aspect-ratio: 1/1.3;
   position: relative;
+  transform: scale(1);
+  transition: 0.1s all ease-in-out;
+  overflow: hidden;
+}
+
+.crd:hover {
+  box-shadow: 10px 10px 20px 10px #0000004d !important;
+  transition: 0.1s all ease-in-out;
 }
 
 .inner__content {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
-  background: #0000006c;
+  top: 100%;
+  background: #0000007c;
   color: #fff;
+  text-align: center;
+  padding: 5px;
+  transform: translateY(-32px);
+  transition: 0.3s all ease-in-out;
+}
+.crd:hover .inner__content {
+  transform: translateY(-100%);
+  transition: 0.3s all ease-in-out;
+}
+
+.star {
+  font-size: 24px;
+  color: white;
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background: #000000b0;
+  transition: 0.3s all ease-in-out;
+}
+
+.star:hover {
+  color: var(--primary);
+  transition: 0.3s all ease-in-out;
+  cursor: pointer;
 }
