--- a/src/components/shared/Layout/Layout.module.css
+++ b/src/components/shared/Layout/Layout.module.css
@@ -1,6 +1,8 @@
 .wrapper {
-  background: var(--white) !important;
-  min-height: 100vh;
+  background-color: #8ec5fc !important;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #dcc3fc 100%) !important;
+  height: 100vh;
+  position: fixed;
 }
 
 .logo {
@@ -73,6 +75,14 @@
 
 .ham {
   display: none;
+}
+
+.inner {
+  background-color: #8ec5fc !important;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #dcc3fc 100%) !important;
+  min-height: calc(100vh - 56px);
+  right: 0;
+  position: absolute;
 }
 
 @media screen and (max-width: 768px) {
