--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+:root {
+  --primary: #3c9cf6;
+  --primary-hover: #0a6afa;
+  --secondary: rgb(34, 34, 34);
+  --secondary-500: rgba(211, 211, 211, 0.5);
+  --danger: #dc3545;
+  --danger-hover: #a52734;
+  --dark: #1f1f1f;
+  --dark-bg: #333333;
+  --light: #f5f5f5;
+  --white: #fff;
+  --light-bg: #444444;
+  --border: #4d4d4d;
+  --success: #1db954;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
