--- a/src/components/Landing/SongList/SongCard/SongCard.module.css
+++ b/src/components/Landing/SongList/SongCard/SongCard.module.css
@@ -50,3 +50,33 @@
   transition: 0.3s all ease-in-out;
   cursor: pointer;
 }
+
+.btn {
+  text-decoration: none;
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+  box-shadow: 5px 5px 10px 5px #0000002f !important;
+  border: none;
+  margin: 10px;
+  padding: 10px 15px;
+  text-align: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  font-weight: 400;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
