--- a/src/components/shared/Layout/Layout.module.css
+++ b/src/components/shared/Layout/Layout.module.css
@@ -80,7 +80,7 @@
 .inner {
   background-color: #8ec5fc !important;
   background-image: linear-gradient(62deg, #8ec5fc 0%, #dcc3fc 100%) !important;
-  min-height: calc(100vh - 56px);
+  min-height: calc(100vh);
   right: 0;
   position: absolute;
 }
