--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --primary: #3c9cf6;
-  --primary-hover: #0a6afa;
+  --primary: #007bf7;
+  --primary-hover: #6f00ff;
   --secondary: rgb(34, 34, 34);
   --secondary-500: rgba(211, 211, 211, 0.5);
   --danger: #dc3545;
