--- a/src/common.module.css
+++ b/src/common.module.css
@@ -26,3 +26,9 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+.text_gradient {
+  background: -webkit-linear-gradient(#007bf7, #6f00ff) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+}
