--- a/src/components/shared/Layout/PlaylistSidebar/PlaylistSidebar.module.css
+++ b/src/components/shared/Layout/PlaylistSidebar/PlaylistSidebar.module.css
@@ -19,6 +19,48 @@
 
 .heading {
   background: -webkit-linear-gradient(#007bf7, #6f00ff);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.close {
+  font-size: 30px;
+  color: var(--primary);
+  transition: 0.3s all ease-in-out;
+}
+
+.close:hover {
+  color: var(--primary-hover);
+  cursor: pointer;
+  transition: 0.3s all ease-in-out;
+}
+
+.btn {
+  text-decoration: none;
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+  box-shadow: 5px 5px 10px 5px #0000002f !important;
+  border: none;
+  margin: 10px;
+  padding: 8px 15px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  font-weight: 600;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
 }
