--- a/src/components/shared/Layout/Layout.module.css
+++ b/src/components/shared/Layout/Layout.module.css
@@ -33,9 +33,10 @@
 }
 .nav__item:global(.active) .icon {
   background: linear-gradient(
-    90deg,
-    var(--primary) 0%,
-    var(--primary-hover) 100%
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
   ) !important;
   border-radius: 50%;
   color: var(--white) !important;
