project ready for submission

--- a/src/components/shared/Layout/Layout.module.css
+++ b/src/components/shared/Layout/Layout.module.css
@@ -86,7 +86,9 @@
   right: 0;
   position: absolute;
 }
-
+.pro {
+  font-size: 12px;
+}
 @media screen and (max-width: 768px) {
   .wrapper {
     display: block;
